--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Registro</title>
-    <link rel="stylesheet" href="../INICIO_DE_SESION/CSS/style.css">
+    <link rel="stylesheet" href="INICIO_DE_SESION/CSS/style.css">
  
 </head>
 <body>
@@ -26,6 +26,7 @@
         </p>
     </div>
 
-    <script src="../INICIO_DE_SESION/JS/registro.js"></script>
+    <script src="INICIO_DE_SESION/JS/registro.js"></script>
 </body>
+
 </html>
